--- a/.drone.yml
+++ b/.drone.yml
@@ -3,5 +3,5 @@ pipeline:
     image: jmccann/drone-terraform:5
     tf_version: 0.11.15
     vars:
-      app_name: my-project
+      secret_key: my-project
       access_key: 1.0.1
