--- a/.drone.yml
+++ b/.drone.yml
@@ -3,5 +3,5 @@ pipeline:
     image: jmccann/drone-terraform:5
     tf_version: 0.11.15
     vars:
-      secret_key: my-project
-      access_key: 1.0.1
+      secret_key: ${secret_key}
+      access_key: ${access_key}
