--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,6 @@ pipeline:
   terraform:
     image: jmccann/drone-terraform:5
     tf_version: 0.11.15
-    vars:
-      secret_key: ${secret_key}
-      access_key: ${access_key}
+    secrets:
+      secret_key: secret_key
+      access_key: access_key
