--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,8 @@ pipeline:
   terraform:
     image: jmccann/drone-terraform:5
     tf_version: 0.11.15
-    secrets:
-      secret_key: secret_key
-      access_key: access_key
+    environment:
+    AWS_ACCESS_KEY_ID:
+      from_secret: access_key
+    AWS_SECRET_ACCESS_KEY:
+      from_secret: secret_key
